# chip-8-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  LICENSE  README.md  build-and-run.sh  build-and-test.sh  install-requirements.sh  leak-check.sh  main.c  run.sh
googletest/: CMakeLists.txt  test_stack.cpp
src/: CMakeLists.txt  main.c
src/bool_lib/: CMakeLists.txt  bool_lib.c  bool_lib.h
src/stack/: stack.c  stack.h
stack_lib/: CMakeLists.txt  stack.c  stack.h
tests/: CMakeLists.txt  test_bool_test.cpp  test_stack.cpp
